# faststack-mcp

./: .gitignore  .mcp.json  1.md  FASTSTACK_CLAUDE_PROCESS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/faststack_mcp/: __init__.py  cli.py  config.py  models.py  security.py  server.py  storage.py  storage_json.py  storage_pg.py  storage_sqlite.py  watcher.py
src/faststack_mcp/parsers/: __init__.py  config_parser.py  env_parser.py  json_parser.py  python_fastapi.py  reference_extractor.py  sql_parser.py  tailwind_parser.py  typescript_react.py
src/faststack_mcp/scanners/: __init__.py  file_tree.py  filters.py  project_detector.py
src/faststack_mcp/tools/: __init__.py  find_references.py  get_file_context.py  get_file_outline.py  get_file_tree.py  get_project_outline.py  get_symbol.py  get_token_usage.py  index_folder.py  invalidate_cache.py  list_projects.py  search_symbols.py  search_text.py
src/faststack_mcp/utils/: hashing.py  logging.py  offsets.py  pathing.py
tests/: test_config_parser.py  test_env_indexing.py  test_env_parser.py  test_get_project_outline.py  test_json_parser.py  test_python_fastapi.py  test_search_symbols.py  test_search_text.py  test_security.py  test_sql_parser.py  test_tools.py  test_typescript_react.py
