[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faststack-mcp"
version = "0.1.0"
description = "Local-first read-only MCP server for FastAPI + React + PostgreSQL codebases"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "faststack-mcp contributors" }]
dependencies = [
  "mcp>=1.1.0",
  "pydantic>=2.6",
  "click>=8.1",
  "platformdirs>=4.2",
  "orjson>=3.10",
  "tree-sitter>=0.21",
  "tree-sitter-typescript>=0.21",
]
keywords = ["mcp", "fastapi", "react", "typescript", "postgresql", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/example/faststack-mcp"

[project.scripts]
faststack-mcp = "faststack_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
watch    = ["watchfiles>=0.21"]
all      = ["psycopg2-binary>=2.9", "watchfiles>=0.21"]
test     = ["pytest>=8.0"]
